Backend/auth_err_parsed.txt
node.exe : D:\QTHacks\Backend\src\routes\authRoutes.ts:1
At C:\Program Files\nodejs\npx.ps1:29 char:3
+   & $NODE_EXE $NPX_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (D:\QTHacks\Back...authRoutes.ts: 
   1:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
import { Router, Request, Response } from 'express';
                 ^

SyntaxError: The requested module 'express' does not provide an export named 
'Request'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ 
(node:internal/modules/esm/loader:578:26)
    at async asyncRunEntryPointWithESMLoader 
(node:internal/modules/run_main:116:5)

Node.js v22.14.0
